# fastapi_skelet

./: README.md  asgi.py  pyproject.toml
core/: router.py  settings.py
users/: models.py  views.py
