[tool.poetry]
name = "fastapi_skelet"
version = "0.1.0"
description = ""
authors = ["Pavel Slabko <slabkopg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.44.1"
pydantic = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
start = "uvicorn main:app --reload"